<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome_text">Nellodee: sakai for android</string>
    <string name="app_name">Nellodee</string>
    
    <!-- GENERIC BUTTONS -->
	<string name="OK">OK</string>
	<string name="CANCEL">Cancel</string>
	<string name="Edit">Edit</string>
	
	<!-- WARNINGS and ERRORS  -->    
    <string name="missing">There are missing fields</string>
    <string name="noLogin">You shall never pass!</string>
    <string name="noLoginDialog">Sorry, but user name or password don\'t seem right, try again?</string>
    <string name="serverFail">Sorry, but we can\'t reach the server.</string>
	
	<!-- MENUS -->
	<string name="edit">Edit</string>
	<string name="update">Update</string>
	<string name="permissions">Pemissions</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="quit">Quit</string>
	
	<!-- URL Activity -->
    <string name="url">Sakai URL </string>
    <string name="next">Next</string>
    <string name="remember">Remember me</string>
	<string name="noURL">No URL</string>
	<string name="noURL_message">There is missing the URL.</string>
	<string name="noValid">No valid URL</string>
	<string name="noValid_message">The URL is not valid.</string>
	
	<!--  LOG IN Activity -->
    <string name="username">User name: </string>
    <string name="password">Password: </string>
	<string name="sign_in">Sign in</string>
	
	<!-- TABS MENU -->
	<string name="you">You</string>
	<string name="createAdd">Create + Add</string>
	<string name="explore">Explore</string>
	
 	<!-- YOU MENU -->
 	<string name="myMessages">My messages</string>
 	<string name="myProfile">My profile</string> 	
 	<string name="myLibrary">My library</string>
 	<string name="myMembership">My membership</string>
 	<string name="myContacts">My contacts</string>
    
    <!-- PROFILE MENU -->
    <string name="basicInfo">Basic Information</string>
    <string name="aboutMe">About me</string>
    <string name="categories">Categories</string>
	<string name="publications">Publications</string>
	
	<!-- BASIC PROFILE -->
	<string name="firstName">First name: </string>
	<string name="lastName">Last name: </string>
	<string name="prefName">Preferred name: </string>
	<string name="userName">User name: </string>
	<string name="email">Email: </string>
	<string name="rol">Rol/Position: </string>
	<string name="department">Department: </string>
	<string name="college">College: </string>
	<string name="tags">Tags: </string>

	<string name="rol_prompt">Select you rol/position</string>	
	<string-array name="rols">
		<item> </item>
        <item>Academic Related Staff</item>
        <item>Academic Staff</item>
        <item>Assistant Staff</item>
        <item>Graduate Student</item>
        <item>Undergraduate Student</item>
        <item>Non-Academic Staff</item>
        <item>Postgraduate Student</item>
        <item>Research Staff</item>
        <item>Other</item>
    </string-array>
    
    <!-- ABOUT ME PROFILE -->
    <string name="about_me">About me: </string>
    <string name="academicInterests">Academic interests: </string>
    <string name="personalInterests">Personal interests: </string>
    <string name="hobbies">Hobbies: </string>
	
	<string name="permissions_prompt">Select permissions to see this data</string>	
	<string-array name="permissions_types">
		<item>Everyone</item>
        <item>Logged in people only</item>
        <item>My contacts only</item>
        <item>Only me</item>
    </string-array>
    
    <!-- SETTINGS -->
    <string name="urlTitle">URL </string>
    <string name="urlSummary">The url where you can find your Sakai</string>
    <string name="urlDialog">Enter the Sakai url</string>    
</resources>
