<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center">
    <Button 
    	android:id="@+id/basicInfoButton" 
    	android:layout_width="150sp" 
    	android:layout_height="wrap_content"
    	android:text="@string/basicInfo" >
    </Button>
    
    <Button 
    	android:id="@+id/aboutMeButton" 
    	android:layout_width="150sp" 
    	android:layout_height="wrap_content"
    	android:text="@string/aboutMe" >
    </Button>
    
	<Button 
    	android:id="@+id/categoriesButton" 
    	android:layout_width="150sp" 
    	android:layout_height="wrap_content"
    	android:text="@string/categories" >
    </Button>
    
	<Button 
    	android:id="@+id/publicationsButton" 
    	android:layout_width="150sp" 
    	android:layout_height="wrap_content"
    	android:text="@string/publications" >
    </Button>
  

</LinearLayout>
