<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:layout_gravity="right|fill_horizontal">

	<TextView android:id="@+id/welcome_text" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textSize="8pt"
		android:paddingBottom="20dip" 
		android:text="@string/welcome_text" />
	
	<LinearLayout android:layout_height="wrap_content" 
	android:layout_width="fill_parent" 
	android:id="@+id/datas" 
	android:layout_below="@+id/welcome_text"
	android:orientation="vertical" 
	android:padding="20dip">

		<TextView 
			android:id="@+id/txt_url" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:layout_below="@id/welcome_text" 
			android:text="@string/url">
		</TextView>
	
		<EditText 
			android:id="@+id/url" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:inputType="textImeMultiLine"
			android:nextFocusDown="@+id/pass">
		</EditText>

	</LinearLayout>
	
	<Button 
		android:id="@+id/url_button" 
		android:layout_height="wrap_content" 
		android:layout_width="100dip" 
		android:text="@string/next" 
		android:layout_below="@+id/datas"
		android:layout_marginRight="20dip" 
		android:layout_alignParentRight="true">
	</Button>


</RelativeLayout>
